# QTmux

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  NOTICE  README.md  vcpkg.json
.github/workflows/: ci.yml
cmake/: FinishSourceLanguageTs.cmake
docs/: MCP.md  mcp-controller-feedback-2026-07-21.md
i18n/: qtmux_de.ts  qtmux_en.ts
installer/: LIESMICH.txt  QTmux.wxs  build-appimage.sh  build-dmg.sh  build-msi.ps1  build-release.ps1  qtmux.desktop
plugins/echo/: CMakeLists.txt  EchoPlugin.cpp
plugins/macpcan/: CMakeLists.txt  CanText.h  MacPcanPlugin.cpp
qml/: Main.qml  SplitNode.qml
resources/appicon/: generate.sh  qtmux.icns  qtmux.rc  svgrender.cpp
shell-integration/: README.md  qtmux-emit.cmd  qtmux-emit.ps1  qtmux-emit.sh  qtmux-event.cmd  qtmux-wait.cmd  qtmux-wait.ps1  qtmux-wait.sh  qtmux.bash  qtmux.ps1  qtmux.zsh
src/app/: main.cpp
src/core/: AgentEventHub.cpp  AgentEventHub.h  AgentRegistry.cpp  AgentRegistry.h  ColorScheme.cpp  ColorScheme.h  ConnectionProfile.cpp  ConnectionProfile.h  GlobalHotkey.cpp  GlobalHotkey.h  HotkeyRegistry.cpp  HotkeyRegistry.h  ITerminalBackend.h  KeyEncoding.cpp  KeyEncoding.h  LinkDetector.cpp  LinkDetector.h  ProcessInfo.cpp  ProcessInfo.h  Pty.h  PtyBackend.cpp  PtyBackend.h  SecretsVault.cpp  SecretsVault.h  SerialBackend.cpp  SerialBackend.h  Session.cpp  Session.h  ShellRegistry.cpp  ShellRegistry.h  SshBackend.cpp  SshBackend.h  UnixPty.cpp  VtScreen.cpp  VtScreen.h  WindowsPty.cpp
src/plugins/: PluginHost.cpp  PluginHost.h  QTmuxPlugin.h
src/server/: McpServer.cpp  McpServer.h
src/terminal/: GlyphAtlas.cpp  GlyphAtlas.h  TerminalItem.cpp  TerminalItem.h
src/terminal/shaders/: glyph.frag  glyph.vert
src/viewmodels/: AppController.cpp  AppController.h  SessionModel.cpp  SessionModel.h  SftpClient.cpp  SftpClient.h  Theme.cpp  Theme.h
tests/: CMakeLists.txt  CheckDocDuplicates.cmake  TestPrograms.h  release-visual-check.ps1  run_detached.ps1  tst_agent.cpp  tst_agenteventhub.cpp  tst_hotkeys.cpp  tst_keyencoding.cpp  tst_linkdetector.cpp  tst_macpcan.cpp  tst_plugins.cpp  tst_profiles.cpp  tst_pty.cpp  tst_session.cpp  tst_sessiongroups.cpp  tst_sftp.cpp  tst_vault.cpp  tst_vtscreen.cpp
